# outlier-position-anatomy

./: 01_layer_attribution.py  02_head_attribution.py  02b_head_attribution_multimodel.py  03_circuit_ablation.py  04_register_variability.py  05_register_direction.py  06_register_vs_unembed_pca.py  NOTES.md  README.md  pyproject.toml
results/gpt2-small/: head_attribution.json  layer_attribution.json  register_direction.json  register_variability.json  register_vs_unembed_pca.json
results/pythia-1.4b/: head_attribution.json  layer_attribution.json  register_direction.json  register_variability.json  register_vs_unembed_pca.json
results/qwen2.5-0.5b/: circuit_ablation.json  head_attribution.json  layer_attribution.json  register_direction.json  register_variability.json  register_vs_unembed_pca.json
